[project]
name = "pyfds"
description = "Modular field simulation tool using finite differences."
dynamic = ["version"]
readme = "README.rst"
authors = [
    {name = "Leander Claes", email = "claes@emt.uni-paderborn.de"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
]
license = {file = "LICENSE"}
requires-python = ">=3.7"

[project.optional-dependencies]
doc = [
    "setuptools_scm",
    "sphinx",
    "sphinx-rtd-theme",
]
test = [
    "pytest",
]

[project.urls]
homepage = "https://emt.uni-paderborn.de"
source = "https://github.com/emtpb/pyfds"
tracker = "https://github.com/emtpb/pyfds/issues"

[build-system]
requires = ["setuptools>=41", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
